# R-Type

./: .gitignore  .gitmodules  LICENSE  README.md  test.txt
.github/workflows/: github-ci.yml
Devops/: .gitlab-ci.yml  CMakeLists.txt  README.md  docker-compose.yml
Devops/Client/: Dockerfile.client  Dockerfile.windows.client  main.cpp  run_tests.sh
Devops/ECS/: CMakeLists.txt  Dockerfile.ecs  Dockerfile.windows.ecs  conanfile.txt  conanfile.windows.txt  install_docker.sh  main.cpp  run_tests.sh  test_main.cpp
Devops/Server/: Dockerfile.server  Dockerfile.windows.server  main.cpp  run_tests.sh
